Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117825

[REG 6.6.0 RC->6.6.0] static build on macOS fails, qt5compat(?)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.4, 6.6.1, 6.7.0 FF
    • 6.6.0
    • Build System: CMake
    • macOS12 x64 from branch 6.6
    • macOS
    • 5420ed09a (dev), 9ba1334a7 (6.6), d26a3443e (6.5), 2b6f87348 (tqtc/lts-6.5)

      Qt 6.6.0 final (candidate) source archive (qt5 SHA1244fc454356bc9fb31a30692b8645cbfd91dc52c) , configure:

      cmake -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_OSX_ARCHITECTURES=x86_64;arm64 -DQT_BUILD_EXAMPLES=FALSE -DCMAKE_BUILD_TYPE=Release -DINPUT_separate_debug_info=no -DINPUT_headersclean=yes -DODBC_ROOT=/usr/local/opt/libiodbc -DPostgreSQL_ROOT=/Applications/Postgres.app/Contents/Versions/14/bin/.. -DOPENSSL_ROOT_DIR=/usr/local/openssl-1.1.1m -DQT_BUILD_TESTS=OFF -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -G Ninja -DBUILD_SHARED_LIBS=OFF /Users/qt/RTA/src-6.6.0 -DCMAKE_INSTALL_PREFIX:PATH=/Users/qt/RTA/src-6.6.0/qtbase -DBUILD_qtwebengine=FALSE 

      Finishes ok, build: cmake --build . --parallel -> fails:

      [1020/12861] headersclean: Checking header qt5compat/src/core5/sax/qxml.h
      FAILED: qt5compat/src/core5/header_check/qxml.h.o /Users/qt/RTA/src-6.6.0/qt5compat/src/core5/header_check/qxml.h.o 
      cd /Users/qt/RTA/src-6.6.0/qt5compat/src/core5 && /Applications/CMake.app/Contents/bin/cmake -E make_directory /Users/qt/RTA/src-6.6.0/qt5compat/src/core5/header_check && /Applications/CMake.app/Contents/bin/cmake -DINPUT_HEADER_FILE=/Users/qt/RTA/src-6.6.0/qt5compat/src/core5/sax/qxml.h -DOUTPUT_ARTIFACT=/Users/qt/RTA/src-6.6.0/qt5compat/src/core5/header_check/qxml.h.o -DPARAMETERS=/Users/qt/RTA/src-6.6.0/qt5compat/src/core5/Core5CompatHeadersCheckParameters.cmake -P /Users/qt/RTA/src-6.6.0/qtbase/cmake/QtModuleHeadersCheck.cmake
      CMake Error at /Users/qt/RTA/src-6.6.0/qtbase/cmake/QtModuleHeadersCheck.cmake:30 (message):
        /Users/qt/RTA/src-6.6.0/qt5compat/src/core5/sax/qxml.h header check failed:
        /usr/bin/clang++;-c;-isysroot;/Applications/Xcode14.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk;-DQT_LEAN_HEADERS=1;-DQT_NO_AS_CONST=1;-DQT_USE_FAST_OPERATOR_PLUS;-DQT_USE_QSTRINGBUILDER;-DQT_NO_CAST_TO_ASCII;-DQT_ASCII_CAST_WARNINGS;-DQT_MOC_COMPAT;-DQT_USE_QSTRINGBUILDER;-DQT_DEPRECATED_WARNINGS;-DQT_BUILDING_QT;-DQT_BUILD_CORE5COMPAT_LIB;-DQT_DISABLE_DEPRECATED_UP_TO=0x050000;-DQT_WARN_DEPRECATED_UP_TO=0x070000;-DQT_NO_EXCEPTIONS;-DQT_CORE_LIB;-DQT_NO_JAVA_STYLE_ITERATORS;-DQT_NO_AS_CONST;-DQT_NO_QEXCHANGE;-DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT;-DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH;-D_LARGEFILE64_SOURCE;-D_LARGEFILE_SOURCE;-DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT;-DQT_NO_DEBUG;-DGL_SILENCE_DEPRECATION;-Wall;-Wextra;-Werror;-Woverloaded-virtual;-Wshadow;-Wundef;-Wfloat-equal;-Wnon-virtual-dtor;-Wpointer-arith;-Wformat-security;-Wno-long-long;-Wno-variadic-macros;-fno-operator-names;-pedantic-errors;-Wchar-subscripts;-Wold-style-cast;-Wcast-align;-Wshorten-64-to-32;-std=c++2a;-I/Users/qt/RTA/src-6.6.0/qt5compat/src/core5/Core5Compat_autogen/include;-I/Users/qt/RTA/src-6.6.0/qtbase/include;-I/Users/qt/RTA/src-6.6.0/qtbase/include/QtCore5Compat;-I/Users/qt/RTA/src-6.6.0/qt5compat/src/core5;-I/Users/qt/RTA/src-6.6.0/qt5compat/src/core5;-I/Users/qt/RTA/src-6.6.0/qtbase/include/QtCore5Compat/6.6.0;-I/Users/qt/RTA/src-6.6.0/qtbase/include/QtCore5Compat/6.6.0/QtCore5Compat;-I/Users/qt/RTA/src-6.6.0/qtbase/include;-I/Users/qt/RTA/src-6.6.0/qtbase/include/QtCore;-I/Users/qt/RTA/src-6.6.0/qtbase/mkspecs/macx-clang;-I/Users/qt/RTA/src-6.6.0/qtbase/include;-I/Users/qt/RTA/src-6.6.0/qtbase/src/corelib;-I/Users/qt/RTA/src-6.6.0/qtbase/include/QtCore/6.6.0;-I/Users/qt/RTA/src-6.6.0/qtbase/include/QtCore/6.6.0/QtCore;-DQT_NO_CAST_TO_ASCII;-DQT_NO_CAST_FROM_ASCII;-DQT_NO_URL_CAST_FROM_STRING;-DQT_NO_CAST_FROM_BYTEARRAY;-DQT_NO_KEYWORDS;-DQT_TYPESAFE_FLAGS;-DQT_USE_QSTRINGBUILDER;-DQT_USE_FAST_OPERATOR_PLUS;-xc++;/Users/qt/RTA/src-6.6.0/qt5compat/src/core5/sax/qxml.h;-o;/Users/qt/RTA/src-6.6.0/qt5compat/src/core5/header_check/qxml.h.o
      FAIL 07:00:56
      BLD_LOG>   /Users/qt/RTA/src-6.6.0/qt5compat/src/core5/sax/qxml.h:9:10: fatal error: 'QtXml/qtxmlglobal.h' file not found
       (Screenshot taken from the desktop is invalid)  #include <QtXml/qtxmlglobal.h>           ^~~~~~~~~~~~~~~~~~~~~  1 error generated.[1021/12861] Building CXX object qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/global/qendian.cpp.o 

      Test is run twice, so not probably flaky. Test passed in last testing round on 3.10.23 with qt5 SHA1 462345a443efdd37bb1f92f50f7e8539ec766ac8

      Full build log available a bit later.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes