SAX: Remove unused QtXml/qtxmlglobal.h header inclusion

It causes a build failure during the headers clean check because the
Core5Compat module does not depend on the qtbase Xml module and thus
the Xml headers are not synced before the core5/sax/qxml.h is
header-checked.

Instead of adding a needless dependency on the Xml module, just remove
the include because nothing from it is used.

qtxmlglobal.h includes QtXml/qtxml-config.h and QtXml/qtxmlexports.h
none of which export any symbols, only defines.
It also includes QtCore/qglobal.h, but that shouldn't affect anything.

[ChangeLog][Important Behavior Changes] The QtCore5Compat/qxml.h header
no longer includes QtXml/qtxmlglobal.h.

Fixes: QTBUG-117825
Change-Id: If23b247204357149c8afda76659d0d040d8c27ab
Reviewed-by: Amir Masoud Abdol <amir.abdol@qt.io>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 5420ed09aee1c5713d72907452285d36981027b7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 9ba1334a7d398c61dec9fbeb06571a771a1c4cd8)
(cherry picked from commit d26a3443ec827fcb434bd49b10ffd853181500c8)
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>